--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,11 @@
-<h1>Make your form here</h1>
+<!DOCTYPE html>
+<head>
+</head>
+<body>
+  <h1>Enter Some Pirates and Ships</h1>
+  <br>
+  <form method="post" action="/pirates">
+
+  
+  </form>
+</body>
