--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -5,7 +5,17 @@
   <h1>Enter Some Pirates and Ships</h1>
   <br>
   <form method="post" action="/pirates">
+    <label for="name">Name:</label>
+    <input type="text" id-"name" name="pirate[name]">
 
+    <label for="weight">Name:</label>
+    <input type="text" id-"weight" name="pirate[weight]">
+
+    <label for="height">Name:</label>
+    <input type="text" id-"height" name="pirate[height]">
+
+    <br>
+    
   
   </form>
 </body>
