automatically backed up by learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -8,10 +8,10 @@
     <label for="name">Name:</label>
     <input type="text" id="name" name="pirate[name]">
 
-    <label for="weight">Name:</label>
+    <label for="weight">Weight:</label>
     <input type="text" id="weight" name="pirate[weight]">
 
-    <label for="height">Name:</label>
+    <label for="height">Height</label>
     <input type="text" id="height" name="pirate[height]">
 
     <br>
